ebuy-ssr/apps/catalog/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
 name: catalog
 namespace: default
 labels:
  app: catalog
spec:
 type: LoadBalancer
 selector:
  app: catalog
 ports:
 - protocol: TCP
    port: 80
    targetPort: 3000
    name: catalog
